--- a/ML/RF y Adaboost - Titanic.ipynb
+++ b/ML/RF y Adaboost - Titanic.ipynb
@@ -4,24 +4,13 @@
       "attachments": {},
       "cell_type": "markdown",
       "metadata": {
-        "id": "8ib0Vrj05zz9"
-      },
-      "source": [
-        "<img src=\"https://www.uss.cl/wp-content/themes/uss/img/logo.svg\" width=\"200\" height=\"200\" style=\"float:left; padding:10px\"/>"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {
         "id": "i9O7Er8t54ve"
       },
       "source": [
-        "# **Proyecto II :** _\"Random Forest y AdaBoost aplicado al análisis de una tragedia\"_\n",
+        "# **Titanic: Análisis de una tragedia**\n",
         "\n",
-        "* Por Nicole Lastra Quiroz\n",
-        "* Julio 2022\n",
-        "----------\n"
+        "*Nicole Lastra Quiroz - Julio 2022*\n",
+        "\n"
       ]
     },
     {
@@ -33,7 +22,7 @@
       "source": [
         "## I. Objetivo\n",
         "\n",
-        "* Predecir si un pasajero sobrevivió al hundimiento del Titanic o no, usando los algoritmos de aprendizaje supervisado (Random Forests y AdaBoost).\n",
+        "* Predecir si un pasajero sobrevivió al hundimiento del Titanic o no, usando los algoritmos de aprendizaje supervisado: Random Forests y AdaBoost.\n",
         "\n",
         "* Para cada uno en el conjunto de prueba, se debe predecir un valor de 0 o 1 para la variable `survived`."
       ]
