--- a/Pandemia en Twitter/Analisis de sentimientos.ipynb
+++ b/Pandemia en Twitter/Analisis de sentimientos.ipynb
@@ -2,23 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c4fdd55c",
+   "id": "9b4e6c69",
    "metadata": {},
    "source": [
-    "<img src=\"https://www.uss.cl/wp-content/themes/uss/img/logo.svg\" width=\"200\" height=\"200\" style=\"float:left; padding:10px\"/>"
+    "# Pandemia en Twitter\n",
+    "\n",
+    "_Nicole Lastra Quiroz - Agosto 2022_\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9b4e6c69",
+   "id": "7277a5f9",
    "metadata": {},
    "source": [
-    "# Proyecto II : Text Mining - Análisis se sentimientos\n",
-    "\n",
-    "Nicole Lastra Quiroz - Agosto 2022\n",
-    "- Asignatura: Text Mining.\n",
-    "- Docente: Dra. Mabel Vidal Miranda.\n",
-    "----------"
+    "## Objetivo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "352a48b2",
+   "metadata": {},
+   "source": [
+    "Generar análisis de sentimientos de los twitters recopilados en período de pandemia por Covid19."
    ]
   },
   {
