--- a/Plebiscito 2022/Proyecto Plebiscito 2022.ipynb
+++ b/Plebiscito 2022/Proyecto Plebiscito 2022.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "id": "c4fdd55c",
-      "metadata": {
-        "id": "c4fdd55c"
-      },
-      "source": [
-        "<img src=\"https://www.uss.cl/wp-content/themes/uss/img/logo.svg\" width=\"200\" height=\"200\" style=\"float:left; padding:10px\"/>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "9b4e6c69",
       "metadata": {
         "id": "9b4e6c69"
@@ -19,8 +9,7 @@
       "source": [
         "# Proyecto de Text Mining: Plebiscito 2022\n",
         "\n",
-        "- Por Nicole Lastra Quiroz\n",
-        "----------"
+        "_Por Nicole Lastra Quiroz_"
       ]
     },
     {
@@ -6275,7 +6264,7 @@
         "id": "3f0bc79d"
       },
       "source": [
-        "### Conclusiones generales"
+        "## Conclusiones generales"
       ]
     },
     {
@@ -6291,8 +6280,6 @@
         "\n",
         "La contingencia que rodeaba el proceso fue bastante discutida y comentada, siendo asociada al \"apruebo\" o \"rechazo\" incluso sin ser parte de las campañas mismas o representación de los ideales de cada bando, como fue el caso de la alta cantidad de menciones a la periodista Alejandra del Valle por las opiniones y dichos ante una \"performance\" en el cierre de la campaña del \"apruebo\".\n",
         "\n",
-        "Respecto al estudio en sí mismo, se considera que con las herramientas entragdas por **pysentimiento** existen varias posibles profundizaciones para realizar en estudios futuros, por ejemplo, considerando las probabilidades de cada etiqueta y revisando aspectos estadísticos de ellas, para generar correlaciones o patrones entre palabras o temáticas expresadas. También se puede realizar un estudio en extenso sobre los discursos de odio, aislando esos tweets y buscando los targets de dichos discursos, o relaciones entre sí.\n",
-        "\n",
         "\n",
         "\n",
         "\n",
@@ -6302,6 +6289,22 @@
         "\n",
         "\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "29c48895",
+      "metadata": {},
+      "source": [
+        "## Trabajo futuro"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "8ad4ea64",
+      "metadata": {},
+      "source": [
+        "Se considera que con las herramientas entragdas por **pysentimiento** existen varias posibles profundizaciones para realizar en estudios futuros, por ejemplo, considerando las probabilidades de cada etiqueta y revisando aspectos estadísticos de ellas, para generar correlaciones o patrones entre palabras o temáticas expresadas. También se puede realizar un estudio en extenso sobre los discursos de odio, aislando esos tweets y buscando los targets de dichos discursos, o relaciones entre sí.\n"
       ]
     },
     {
