--- a/Web Scrapping y Word Cloud/Web Scrapping y Word Cloud.ipynb
+++ b/Web Scrapping y Word Cloud/Web Scrapping y Word Cloud.ipynb
@@ -2,21 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c4fdd55c",
-   "metadata": {},
-   "source": [
-    "<img src=\"https://www.uss.cl/wp-content/themes/uss/img/logo.svg\" width=\"200\" height=\"200\" style=\"float:left; padding:10px\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "9b4e6c69",
    "metadata": {},
    "source": [
     "# Text Mining\n",
     "\n",
-    "Nicole Lastra Quiroz - Agosto 2022\n",
-    "----------"
+    "_Nicole Lastra Quiroz - Agosto 2022_\n"
    ]
   },
   {
@@ -24,20 +15,9 @@
    "id": "48dde601",
    "metadata": {},
    "source": [
-    "### Objetivo: \n",
+    "## Objetivo \n",
     "\n",
-    "Extraer y limpiar datos aplicando técnicas de preprocesamiento vistas en clases para  finalmente  construir una  visualización  (wordcloud)  delos  datos.Puede utilizar  redes  sociales,  o  cualquier  página  web  de  su  interés.  O  si  dispone  de datos como entrevistas o encuestas también pueden ser utilizadas.\n",
-    "\n",
-    "### Instrucciones generales:\n",
-    "* Realizar web scrapping y trabajar con datos tabulares de páginas HTMLo utilizar una API para extraer datos.\n",
-    "* El archivo que debe entregar debe estar en lenguaje Python.\n",
-    "* Comente  su  código  por  secciones,  por ejemplo,si  tiene  una  función  que realiza  una  tarea  específica explique  que  hace  su  función,  lo  mismo  por bloques de instrucciones.\n",
-    "\n",
-    "### Qué debe abordar en su proyecto:\n",
-    "1. Extracción de datos\n",
-    "2. Lectura de archivosy visualizar 5 líneas de estos.\n",
-    "3. Aplicar técnicas de preprocesamiento (expresión regular, stopwords, lemmatization, etc.) \n",
-    "4. Crear un wordcloud para visualizar palabras más frecuentes."
+    "Generar **web scrapping** de redes sociales para la recolección de contenido escrito, con el cual se construirá un **word cloud** de síntesis."
    ]
   },
   {
